updated Skills section

--- a/Index.html
+++ b/Index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
-    <title>Hello, world!</title>
+    <title>Zachary Williams</title>
     <!-- Aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   </head>
@@ -22,13 +22,13 @@
     <!-- NavBar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand d-flex justify-content-start text-light" href="#">Zachary</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
+          <div class="collapse navbar-collapse d-flex  justify-content-end " id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item">
+              <li class="nav-item text-white">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
@@ -53,6 +53,18 @@
           </div>
         </div>
       </nav>
+       <!-- Social Links-->
+    <section id="social-icons">
+      <a class="social-icon" target="_blank" href="https://github.com/Willzi3">
+          <i class="fa-brands fa-github"></i>
+      </a>
+      <a class="social-icon" target="_blank" href="https://www.linkedin.com/in/zachary-williams-b3388a237/">
+          <i class="fa-brands fa-linkedin"></i>
+      </a>
+      <a class="social-icon" target="_blank" href="https://codepen.io/Willzi3">
+        <i class="fa-brands fa-codepen"></i>
+      </a>
+  </section>
       <!-- Landing -->
       <section id="landing"  class="mb-5 vh-100 d-flex align-items-center">
           <div class="container">
@@ -66,7 +78,7 @@
           </div>
       </section>
       <!-- About Section -->
-      <section id="About" class="mb-5">
+      <section id="about" class="mb-5">
           <div class="container shadow p-5 bg-dark text-light">
               <div class="row mx-5">
                   <div class="col-md-6">
@@ -107,7 +119,7 @@
       <section id="skills">
         <div class="container bg-white mb-5">
           <div class="row mb-3">
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
@@ -125,7 +137,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
@@ -143,7 +155,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
@@ -162,9 +174,7 @@
               </div>
               
             </div>
-          </div>
-          <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
@@ -182,7 +192,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
@@ -200,7 +210,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6">
               <div class="flip-card">
                 <div class="flip-card-inner">
                   <div class="flip-card-front">
@@ -346,11 +356,33 @@
               <div class="carousel-item active">
                 <div class="card">
                   <div class="t_img d-flex justify-content-center">
-                    <img src="./images/Cameron (5).JPG" alt="">
+                    <img src="./images/T02LW4RMXJQ-U036JA3NVL5-45897a34dc43-512.jfif" alt="">
                   </div>
                   <div class="t_msg p-5 text-center">
                     <h6>Jason Wandrag</h6>
-                    <p>"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, delectus quod perspiciatis quos aspernatur a!"</p>
+                    <p>"Zachary is the epitome of a curious mind. He has an ability to absorb a vast amount of information and apply concepts with a high degree of understanding. In addition to that, Zachary has quickly become a pillar of support amongst his peers, who all respect the value that he brings to the room. I have no doubt that Zachary will be a force to be reckoned with in the tech space."</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="card">
+                  <div class="t_img d-flex justify-content-center">
+                    <img src="./images/Sunethia (4).JPG" alt="">
+                  </div>
+                  <div class="t_msg p-5 text-center">
+                    <h6>Sunethia Lawrence</h6>
+                    <p>"Zachary is one of a kind, always willing to help and always gives his utmost best at his work. He is hardworking and always strives to do better."</p>
+                  </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="card">
+                  <div class="t_img d-flex justify-content-center">
+                    <img src="./images/Cameron (5).JPG" alt="">
+                  </div>
+                  <div class="t_msg p-5 text-center">
+                    <h6>Cameron Tamboer</h6>
+                    <p>"Zachary Williams is a very competent individual, he strives higher than what he is capable of doing. His passion for his work preference is outstanding and he is a headstrong and smart working person "</p>
                   </div>
                 </div>
               </div>
@@ -360,41 +392,19 @@
                     <img src="./images/Chanique (1).JPG" alt="">
                   </div>
                   <div class="t_msg p-5 text-center">
-                    <h6>Sunethia Lawrence</h6>
-                    <p>"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, delectus quod perspiciatis quos aspernatur a!"</p>
-                  </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="card">
-                  <div class="t_img d-flex justify-content-center">
-                    <img src="./images/Sunethia (4).JPG" alt="">
-                  </div>
-                  <div class="t_msg p-5 text-center">
-                    <h6>Cameron </h6>
-                    <p>"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, delectus quod perspiciatis quos aspernatur a!"</p>
-                  </div>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="card">
-                  <div class="t_img d-flex justify-content-center">
-                    <img src="./images/Sunethia (4).JPG" alt="">
-                  </div>
-                  <div class="t_msg p-5 text-center">
                     <h6>Chanique Mansoor</h6>
-                    <p>"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, delectus quod perspiciatis quos aspernatur a!"</p>
+                    <p>"Zachary is very straightforward and loves helping where he can, he tends to put others above himself and I think he will be great attribute in any working environment"</p>
                   </div>
                 </div>
               </div>
               <div class="carousel-item">
                 <div class="card">
                   <div class="t_img d-flex justify-content-center">
-                    <img src="./images/Sunethia (4).JPG" alt="">
+                    <img src="./images/Mziyanda (3).JPG" alt="">
                   </div>
                   <div class="t_msg p-5 text-center">
                     <h6>Mziyanda Tobo</h6>
-                    <p>"Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt, delectus quod perspiciatis quos aspernatur a!"</p>
+                    <p>"Zachary Williams is very consistent and hard-working young man. He is very advanced and that shows in his work. I would highly recommend Zachary to any team or company as he is an impressive asset and addition."</p>
                   </div>
                 </div>
               </div>
@@ -455,8 +465,9 @@
         </div>
       </section>
       <!-- Footer Section-->
-      <footer class="bg-dark text-light p-3 d-flex justify-content-center align-items-center">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, dolores?</p>
+      <footer class="bg-dark text-light d-flex flex-column justify-content-center align-items-center">
+        <p>All Rights Reserved © 2022.</p>
+        <p>Made With  By Zachary</p>
       </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
