--- a/Index.html
+++ b/Index.html
@@ -467,7 +467,7 @@
       <!-- Footer Section-->
       <footer class="bg-dark text-light d-flex flex-column justify-content-center align-items-center">
         <p>All Rights Reserved © 2022.</p>
-        <p>Made With  By Zachary</p>
+        <p>Designed By Zachary</p>
       </footer>
     <!-- Optional JavaScript; choose one of the two! -->
 
