--- a/Index.html
+++ b/Index.html
@@ -79,7 +79,7 @@
       </section>
       <!-- About Section -->
       <section id="about" class="mb-5">
-          <div class="container shadow p-5 bg-dark text-light" data-aos="flip-up">
+          <div class="container shadow  pt-5 bg-dark text-light" data-aos="flip-up">
               <div class="row mx-5">
                   <div class="col-md-6" data-aos="fade-right">
                       <div class="about_img" >
