--- a/Index.html
+++ b/Index.html
@@ -300,7 +300,7 @@
             <div class="staff-details">
               <h3>Cube Navigation</h3>
               <p>HTML/CSS</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, aperiam?</p>
+              <p>A website that uses a 3D cube as its navigation system.</p>
               <div class="staff_btn">
                 <a href="https://heartfelt-haupia-89f3cf.netlify.app/" target="_blank"><button class="">Live</button></a>
               <a href="https://github.com/Willzi3/Preparation.git" target="_blank"><button>Github</button></a>
@@ -312,7 +312,7 @@
             <div class="staff-details">
               <h3>Calculator</h3>
               <p>HTML/CSS</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, aperiam?</p>
+              <p></p>
               <div class="staff_btn">
                 <a href="https://tourmaline-starlight-d6ba80.netlify.app/" target="_blank"><button class="">Live</button></a>
               <a href="https://github.com/Willzi3/Calculator.git" target="_blank"><button>Github</button></a>
@@ -324,7 +324,7 @@
             <div class="staff-details">
               <h3>Restaurantly Website</h3>
               <p>HTML/CSS</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, aperiam?</p>
+              <p></p>
               <div class="staff_btn">
                 <a href="https://willowy-hotteok-575d6b.netlify.app/" target="_blank"><button class="">Live</button></a>
               <a href="https://github.com/Willzi3/restaurantly.git" target="_blank"><button>Github</button></a>
@@ -336,7 +336,7 @@
             <div class="staff-details">
               <h3>SignIn Navigation</h3>
               <p>HTML/CSS</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio, aperiam?</p>
+              <p>Basic signIn navigation,that takes you from page to page.</p>
               <div class="staff_btn">
                 <a href="https://super-pegasus-10da01.netlify.app/" target="_blank"><button class="">Live</button></a>
               <a href="https://github.com/Willzi3/SignIn.git" target="_blank"><button>Github</button></a>
